--- a/index.html
+++ b/index.html
@@ -53,28 +53,30 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">Always creative THINKING different!</p>
-      <p class="about__text">I build IoT prototypes using open-source components & everyday tools. I merge the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability.</p>
-      <button id="toggleButton0">+ Read more...</button>
+      <p class="about__text">I build IoT prototypes using open-source components & everyday tools. I merge the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability.
+	<button id="toggleButton0">+ Read more...</button>
+      </p>
+      
   
   <!-- Diagram Container -->
   <div class="diagram-container" id="diagramContainer0">
   <pre class="diagram">
-	 <p>
+	 <p class="about__text">
     The Internet of Things (IoT) is reshaping how we interact with our surroundings by transforming everyday objects into smart devices that communicate with one another. IoT creates a highly interconnected environment that generates abundant real-time data. Meanwhile, workflow automation capitalises on these data streams to streamline tasks and optimise processes, reducing manual workloads and promoting efficiency.
   </p>
 
-  <h2>How IoT Enhances Workflow Automation</h2>
-  <p>
+  <h2 class="about__text">How IoT Enhances Workflow Automation</h2>
+  <p class="about__text">
     The union of IoT with workflow automation is driving enhanced efficiency across various environments. Here’s how IoT makes a difference:
   </p>
 
   <h3>Real-Time Data Collection</h3>
-  <p>
+  <p class="about__text">
     IoT devices continuously gather data from sensors embedded in everything from smart meters and gas level monitors to water flow sensors and environmental detectors. Whether monitoring the real-time electricity consumption or tracking the remaining gas in your canister, this information is invaluable. It empowers users to make quick, data-driven decisions that streamline workflows, reduce resource wastage and increase productivity.
   </p>
 
   <h3>Automation of Routine Tasks</h3>
-  <p>
+  <p class="about__text">
     In both residential and commercial settings, everyday tasks can be automated to free up time and minimise errors. Smart devices can automatically adjust lighting based on occupancy, and they can monitor gas usage and water flow — ensuring that critical operations run efficiently.
   </p>
 
