--- a/index.html
+++ b/index.html
@@ -60,23 +60,22 @@
   
   <!-- Diagram Container -->
   <div class="diagram-container" id="diagramContainer0">
-  <pre class="diagram">
-	 <p class="about__text">
+  <p>
     The Internet of Things (IoT) is reshaping how we interact with our surroundings by transforming everyday objects into smart devices that communicate with one another. IoT creates a highly interconnected environment that generates abundant real-time data. Meanwhile, workflow automation capitalises on these data streams to streamline tasks and optimise processes, reducing manual workloads and promoting efficiency.
   </p>
 
-  <h2 class="about__text">How IoT Enhances Workflow Automation</h2>
-  <p class="about__text">
+  <h2>How IoT Enhances Workflow Automation</h2>
+  <p>
     The union of IoT with workflow automation is driving enhanced efficiency across various environments. Here’s how IoT makes a difference:
   </p>
 
   <h3>Real-Time Data Collection</h3>
-  <p class="about__text">
+  <p>
     IoT devices continuously gather data from sensors embedded in everything from smart meters and gas level monitors to water flow sensors and environmental detectors. Whether monitoring the real-time electricity consumption or tracking the remaining gas in your canister, this information is invaluable. It empowers users to make quick, data-driven decisions that streamline workflows, reduce resource wastage and increase productivity.
   </p>
 
   <h3>Automation of Routine Tasks</h3>
-  <p class="about__text">
+  <p>
     In both residential and commercial settings, everyday tasks can be automated to free up time and minimise errors. Smart devices can automatically adjust lighting based on occupancy, and they can monitor gas usage and water flow — ensuring that critical operations run efficiently.
   </p>
 
@@ -143,9 +142,9 @@
   <p>
     Are you ready to transform your environment with intelligent automation and IoT? Let’s start the conversation and build solutions that are efficient, sustainable, and perfectly tailored to your needs.
   </p>  
-  </pre>
   </div>
-      <div >
+	    
+      <div>
       <ul class="social-share-btns">
         <li class="facebook"> 
           <a href="https://www.facebook.com/sharer/sharer.php?u=https://arnold.workflowautomation.expert.?utm_source=facebook%26utm_medium=social%26utm_campaign=share_buttons&quote=This Workflow Automation Expert built my workflow automation">
