--- a/index.html
+++ b/index.html
@@ -418,22 +418,22 @@
     The Internet of Things (IoT) is reshaping how we interact with our surroundings by transforming everyday objects into smart devices that communicate with one another. IoT creates a highly interconnected environment that generates abundant real-time data. Meanwhile, workflow automation capitalises on these data streams to streamline tasks and optimise processes, reducing manual workloads and promoting efficiency.
   </p>
 
-  <h2 class="hero__subheading">How IoT Enhances Workflow Automation</h2>
+  <h2 class="about__subheading">How IoT Enhances Workflow Automation</h2>
   <p class="about__text">
     The union of IoT with workflow automation is driving enhanced efficiency across various environments. Here’s how IoT makes a difference:
   </p>
 
-  <h3 class="service__heading">Real-Time Data Collection</h3>
+  <h3 class="about__heading">Real-Time Data Collection</h3>
   <p class="about__text">
     IoT devices continuously gather data from sensors embedded in everything from smart meters and gas level monitors to water flow sensors and environmental detectors. Whether monitoring the real-time electricity consumption or tracking the remaining gas in your canister, this information is invaluable. It empowers users to make quick, data-driven decisions that streamline workflows, reduce resource wastage and increase productivity.
   </p>
 
-  <h3 class="service__heading">Automation of Routine Tasks</h3>
+  <h3 class="about__heading">Automation of Routine Tasks</h3>
   <p class="about__text">
     In both residential and commercial settings, everyday tasks can be automated to free up time and minimise errors. Smart devices can automatically adjust lighting based on occupancy, and they can monitor gas usage and water flow — ensuring that critical operations run efficiently.
   </p>
 
-  <h2 class="hero__subheading">Resource Management with IoT</h2>
+  <h2 class="about__subheading">Resource Management with IoT</h2>
   <p class="about__text">
     Efficient management of electricity, gas, and water resources is critical—especially in challenging regions like Southern Africa. IoT offers innovative solutions to address these limitations head-on.
   </p>
