--- a/index.html
+++ b/index.html
@@ -413,32 +413,32 @@
 
    <section class="about">
       <hr class="about__hr">
-      <p class="about__tagline">Introduction to IoT and Workflow Automation</p>
+      <p class="about__tagline">About IoT and Workflow Automation</p>
         <p class="about__text">
     The Internet of Things (IoT) is reshaping how we interact with our surroundings by transforming everyday objects into smart devices that communicate with one another. IoT creates a highly interconnected environment that generates abundant real-time data. Meanwhile, workflow automation capitalises on these data streams to streamline tasks and optimise processes, reducing manual workloads and promoting efficiency.
   </p>
 
-  <h2 class="about__subheading">How IoT Enhances Workflow Automation</h2>
+  <h2 class="about__heading">How IoT Enhances Workflow Automation</h2>
   <p class="about__text">
     The union of IoT with workflow automation is driving enhanced efficiency across various environments. Here’s how IoT makes a difference:
   </p>
 
-  <h3 class="about__heading">Real-Time Data Collection</h3>
+  <h3 class="about__subheading">Real-Time Data Collection</h3>
   <p class="about__text">
     IoT devices continuously gather data from sensors embedded in everything from smart meters and gas level monitors to water flow sensors and environmental detectors. Whether monitoring the real-time electricity consumption or tracking the remaining gas in your canister, this information is invaluable. It empowers users to make quick, data-driven decisions that streamline workflows, reduce resource wastage and increase productivity.
   </p>
 
-  <h3 class="about__heading">Automation of Routine Tasks</h3>
+  <h3 class="about__subheading">Automation of Routine Tasks</h3>
   <p class="about__text">
     In both residential and commercial settings, everyday tasks can be automated to free up time and minimise errors. Smart devices can automatically adjust lighting based on occupancy, and they can monitor gas usage and water flow — ensuring that critical operations run efficiently.
   </p>
 
-  <h2 class="about__subheading">Resource Management with IoT</h2>
+  <h2 class="about__heading">Resource Management with IoT</h2>
   <p class="about__text">
     Efficient management of electricity, gas, and water resources is critical—especially in challenging regions like Southern Africa. IoT offers innovative solutions to address these limitations head-on.
   </p>
 
-  <h3class="service__heading">Energy Resource Management</h3>
+  <h3 class="about__subheading">Energy Resource Management</h3>
   <p class="about__text">
     IoT can have a substantial impact through:
   </p>
@@ -451,7 +451,7 @@
     </li>
   </ul>
 
-  <h3 class="service__heading">Water Resource Management</h3>
+  <h3 class="about__subheading">Water Resource Management</h3>
   <p class="about__text">
     In addition to energy, water is a crucial resource. IoT-enabled water management can significantly improve conservation by providing real-time insights into usage:
   </p>
@@ -464,22 +464,22 @@
     </li>
   </ul>
 
-  <h2 class="hero__subheading">Creating Intelligent Environments</h2>
+  <h2 class="about__heading">Creating Intelligent Environments</h2>
   <p class="about__text">
     IoT and workflow automation extend far beyond basic resource management—they are transforming spaces into smart, adaptive environments that respond to our behavior and needs.
   </p>
 
-  <h3 class="service__heading">Smart Homes and Commercial Spaces</h3>
+  <h3 class="about__subheading">Smart Homes and Commercial Spaces</h3>
   <p class="about__text">
     Imagine residences where lighting, water, and gas systems are intelligently monitored by IoT networks, and commercial spaces where entire buildings adjust to occupancy levels and usage patterns automatically. This creates efficient, comfortable, and safe environments, with each resource managed based on real-time data.
   </p>
 
-  <h3 class="service__heading">Personalised Experiences</h3>
+  <h3 class="about__subheading">Personalised Experiences</h3>
   <p class="about__text">
     IoT technology enables systems to tailor operations to individual priorities. Whether it’s achieving a perfectly lit living space, ensuring a commercial property meets stringent operational standards or precise gas level measurements to alert when running low, smart devices support sustainability and enhance user satisfaction.
   </p>
 
-  <h2 class="hero__subheading">Bringing Your IoT Vision to Life</h2>
+  <h2 class="about__heading">Bringing Your IoT Vision to Life</h2>
   <p class="about__text">
     As a Workflow Automation Expert, I'm uniquely positioned to help bring your IoT ideas to reality. My expertise and experience in integrating smart solutions across residential and commercial spaces means I can help you optimise electricity, gas and water management while streamlining your processes.
   </p>
