--- a/index.html
+++ b/index.html
@@ -442,11 +442,11 @@
   <p class="about__text">
     IoT can have a substantial impact through:
   </p>
-  <ul>
-    <li class="service__list__item">
+  <ul class="about__list">
+    <li class="about__list__item">
       <strong>Electricity Monitoring:</strong> Provide detailed real-time insight into consumption patterns, which helps identify inefficiencies and adjust usage.
     </li>
-    <li class="service__list__item">
+    <li class="about__list__item">
       <strong>Gas Monitoring:</strong> Provide accurate readings of the remaining gas content. These measurements help in planning timely refills and ensuring uninterrupted operations.
     </li>
   </ul>
@@ -455,11 +455,11 @@
   <p class="about__text">
     In addition to energy, water is a crucial resource. IoT-enabled water management can significantly improve conservation by providing real-time insights into usage:
   </p>
-  <ul class="service__list" >
-    <li class="service__list__item">
+  <ul class="about__list" >
+    <li class="about__list__item">
       <strong>Leak Detection and Monitoring:</strong> Sensors installed along pipelines or at water fixtures continuously measure flow and pressure, quickly identifying leaks or unusual usage patterns.
     </li>
-    <li class="service__list__item">
+    <li class="about__list__item">
       <strong>Usage Optimisation:</strong> Smart irrigation systems, driven by moisture sensors and weather data, ensure that watering schedules are perfectly timed for gardens or agricultural fields, conserving water and promoting plant health.
     </li>
   </ul>
@@ -484,11 +484,11 @@
     As a Workflow Automation Expert, I'm uniquely positioned to help bring your IoT ideas to reality. My expertise and experience in integrating smart solutions across residential and commercial spaces means I can help you optimise electricity, gas and water management while streamlining your processes.
   </p>
   <p class="about__text">Comprehensive project approach includes:</p>
-  <ul class="service__list" >
-    <li class="service__list__item"><strong>Detailed Consultation:</strong> I work with you to understand your specific energy, water, and operational needs.</li>
-    <li class="service__list__item"><strong>Tailored Solution Design:</strong> I develop custom automation and IoT project that seamlessly integrate into your environment.</li>
-    <li class="service__list__item"><strong>Prototyping and Testing:</strong> I build and test prototypes to ensure that your project is scalable, reliable, and accurate.</li>
-    <li class="service__list__item"><strong>Ongoing Support:</strong> I provide continuous guidance and support as you refine your project and expand its capabilities.</li>
+  <ul class="about__list" >
+    <li class="about__list__item"><strong>Detailed Consultation:</strong> I work with you to understand your specific energy, water, and operational needs.</li>
+    <li class="about__list__item"><strong>Tailored Solution Design:</strong> I develop custom automation and IoT project that seamlessly integrate into your environment.</li>
+    <li class="about__list__item"><strong>Prototyping and Testing:</strong> I build and test prototypes to ensure that your project is scalable, reliable, and accurate.</li>
+    <li class="about__list__item"><strong>Ongoing Support:</strong> I provide continuous guidance and support as you refine your project and expand its capabilities.</li>
   </ul>
   <p class="about__text">
     If you’re exploring ideas in IoT and need a partner to help build a prototype that redefines resource management for your home or business, I can turn your innovative concepts into a sustainable, efficient reality.
