--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1 class="hero__heading" id="hero__heading">Arnold™ | Workflow Automation Expert</h1>
         <div id="expertStatus"></div>
         <div>
-           <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a free consulting session</a>
+           <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a free consultation</a>
         </div>
       </div>
 
@@ -339,7 +339,7 @@
     </section>
 
     <section aria-labelledby="projects__heading" id="projects">
-      <h2 class="projects__heading" id="projects__heading">Appointments & Reviews</h2>
+      <h2 class="projects__heading" id="projects__heading">Consultations & Reviews</h2>
 
 
       <div class="projects__projects-layout">
@@ -364,7 +364,7 @@
             <section aria-label="RFP">
 
               <h3 class="project__name">But, I can still build your prototype.</h3>
-               <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a free consulting session</a>
+               <a class="button__click" href="https://app.cal.com/workflowautomationexpert">Book a free consultation</a>
                <a class="button__click" href="https://www.trustpilot.com/review/arnold.workflowautomation.expert">View project reviews</a>
                             <!--
               <p class="project__description">Please outline your work request and expectation below.</p>
