--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">Always creative THINKING different!</p>
-      <p class="about__text">I build IoT prototypes using open-source components & everyday tools. I merge the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability.
+      <p class="about__text">I build IoT prototypes using open-source components & everyday tools. By merging the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability.
       </p>
  
       <div>
