--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
   <h3 class="about__subheading">Real-Time Data Collection</h3>
   <p class="about__text">
-    IoT devices continuously gather data from sensors embedded in everything from smart meters and gas level monitors to water flow sensors and environmental detectors. Whether monitoring the real-time electricity consumption or tracking the remaining gas in your canister, this information is invaluable. It empowers users to make quick, data-driven decisions that streamline workflows, reduce resource wastage and increase productivity.
+    IoT devices continuously gather data from sensors embedded in everything from smart meters and gas level monitors to water flow sensors and environmental detectors. Whether monitoring the real-time electricity consumption or tracking the remaining gas in your cylinder, this information is invaluable. It empowers users to make quick, data-driven decisions that streamline workflows, reduce resource wastage and increase productivity.
   </p>
 
   <h3 class="about__subheading">Automation of Routine Tasks</h3>
@@ -429,7 +429,7 @@
       <strong>Electricity Monitoring:</strong> Provide detailed real-time insight into consumption patterns, which helps identify inefficiencies and adjust usage.
     </li>
     <li class="about__list__item">
-      <strong>Gas Monitoring:</strong> Provide accurate readings of the remaining gas content. These measurements help in planning timely refills and ensuring uninterrupted operations.
+      <strong>Gas Monitoring:</strong> Provide accurate readings of the remaining gas content in cylinder. These measurements help in planning timely refills and ensuring uninterrupted operations.
     </li>
   </ul>
 
@@ -439,7 +439,7 @@
   </p>
   <ul class="about__list" >
     <li class="about__list__item">
-      <strong>Leak Detection and Monitoring:</strong> Sensors installed along pipelines or at water fixtures continuously measure flow and pressure, quickly identifying leaks or unusual usage patterns.
+      <strong>Leak Detection:</strong> Sensors installed along pipelines or at water fixtures continuously measure flow and pressure, quickly identifying leaks or unusual usage patterns.
     </li>
     <li class="about__list__item">
       <strong>Usage Optimisation:</strong> Smart irrigation systems, driven by moisture sensors and weather data, ensure that watering schedules are perfectly timed for gardens or agricultural fields, conserving water and promoting plant health.
