--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <section aria-label="1" class="service">
               <h3 class="service__heading">
                 <span class="service__heading__content">
-                  <span class="service__heading__content__text">Gaso:metrica</span>
+                  <span class="service__heading__content__text">Energo:metrica</span>
                 </span>
               </h3>
               <p class="service__description">🔥A smart LPG telemetry prototype designed for resource management in homes, kitchens, and workshops. By delivering real-time monitoring of LPG cylinder gas levels, it ensures that you never face the inconvenience of an unexpectedly empty cylinder. Instead, timely refill notifications help maximise operational uptime.</p>
