--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                   <span class="service__heading__content__text">Hydro:metrica</span>
                 </span>
               </h3>
-              <p class="service__description">💧 A smart water telemetry prototype, designed for resource management in greenhouses, homes, offices, and workshops, providing real-time monitoring and automated distribution control. The ecosystem can integrate a tank level guage,  flow meter, and relay-actuated valve to enable precise regulation of water usage based on demand patterns, minimising waste and improving overall system efficiency.</p>
+              <p class="service__description">💧 A smart water telemetry prototype, designed for resource management in greenhouses, homes, offices, and workshops, providing real-time monitoring and automated distribution control. The ecosystem can integrate a tank level gauge,  flow meter, and relay-actuated valve to enable precise regulation of water usage based on demand patterns, minimising waste and improving overall system efficiency.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
