--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 		<li class="service__list__item"><a href="https://raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="10%"/></a></li>
 		<li class="service__list__item"><a href="https://homeassistant.io" target="_blank" rel="nofollow"><img src="img/home-assistant.png" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://helium.com/iot" target="_blank" rel="nofollow"><img src="img/helium.png" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
-		<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/df-robot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
+		<!--<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/df-robot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>-->
 		<li class="service__list__item"><a href="https://prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa3d.svg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://milonetech.com" target="_blank" rel="nofollow"><img src="img/milone.png" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://rpesrl.com/en" target="_blank" rel="nofollow"><img src="img/RPEsrl.jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
@@ -543,7 +543,7 @@
 		<li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/anvil_logo.svg" width="13%"/></a></li>
 	        <li class="service__list__item"><a href="https://py.space" target="_blank" rel="nofollow"><img  src="img/pyspace_logo.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 	    	<li class="service__list__item"><a href="https://github.com/copilot" target="_blank" rel="nofollow"><img  src="img/githubcopilot.jpeg" width="14%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
-	    	<li class="service__list__item"><a href="https://manus.im" target="_blank" rel="nofollow"><img  src="img/manusai.png" width="17%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
+	    	<!--<li class="service__list__item"><a href="https://manus.im" target="_blank" rel="nofollow"><img  src="img/manusai.png" width="17%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>-->
 		</ul>
             </section>
           </div>  
