--- a/index.html
+++ b/index.html
@@ -142,13 +142,6 @@
                                  [LoRaWAN]                                  
                                      ↓                                      
                       +-------------------------------+                     
-                      |       SenseCap D1L            |                     
-                      | (Touch Display/Controller)    |                     
-                      +-------------------------------+                     
-                                     ↑                                      
-                                 [Wireless]                                 
-                                     ↓                                      
-                      +-------------------------------+                     
                       |         reRouter CM4          |                     
                       |           (IoT Hub)           |                     
                       +--------------+----------------+                     
@@ -157,9 +150,16 @@
               |                      |                         |            
           [Wireless]             [Wireless]                [Wireless]       
               |                      |                         |            
-+-----------------------+  +---------+---------+     +---------+---------+  
-| XIAO 7" e-Paper Panel |  |   XIAO AC Relay   |     |    XIAO AC Meter  |  
-+-----------------------+  +---------+---------+     +---------+---------+  
++-----------------------+   +--------+--------+                |            
+| XIAO 7" e-Paper Panel |   |   SenseCap D1L  |                |            
++-----------------------+   |  Touch Display  |                |            
+                            +--------+--------+                |            
+                                     |                         |            
+                                 [Wireless]                    |            
+                                     |                         |            
+                           +---------+---------+     +---------+---------+  
+                           |   XIAO AC Relay   |     |    XIAO AC Meter  |  
+                           +---------+---------+     +---------+---------+  
                                      |                         |            
                                   [Wired]                   [Wired]         
                                      |                         |            
