--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="hero__body">
         <h2 class="hero__subheading">👋 Hello, I’m Arnold Tonderai Marunda.</h2>
         <div class="hero__text">
-          <p class="hero__intro">✝️ Follower of Christ Jesus. ♂♀ Married Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 💻 Workflow Automation Expert.</p>
+          <p class="hero__intro">✝️ Disciple of Christ Jesus. ♂♀ Married Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 💻 Workflow Automation Expert.</p>
         </div>
       </div>
     </section>
@@ -490,8 +490,9 @@
        <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
               <h3 class="project__name">Living</h3>
-              <ul aria-label="Live and Worship" class="service__list" role="list">
+              <ul aria-label="Evangelise and Disciple" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://nlt.to" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		</ul>
             </section>
           </div>
@@ -500,22 +501,13 @@
             <section aria-label="3" class="service">
               <h3 class="project__name">Teaching</h3>
               <ul aria-label="Learn and Teach" class="service__list" role="list">
-		<li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-                <li class="service__list__item"><a href="https://learn.saylor.org" target="_blank" rel="nofollow"><img src="img/saylor_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://learn.saylor.org" target="_blank" rel="nofollow"><img src="img/saylor_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
        		 <li class="service__list__item"><a href="https://www.coreknowledge.org/download-free-curriculum/" target="_blank" rel="nofollow"><img src="img/coreknowledge_logo.svg" width="40%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>                
 		<li class="service__list__item"><a href="https://www.khanacademy.org" target="_blank" rel="nofollow"><img src="img/khanacademy_logo.png" width="40%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://www.ck12.org" target="_blank" rel="nofollow"><img src="img/ck12_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-           	<li class="service__list__item"><a href="https://polymath.how" target="_blank" rel="nofollow"><img src="img/polymath.svg" width="30%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>   
-		<li class="service__list__item"><a href="https://www.readworks.org" target="_blank" rel="nofollow"><img src="img/readworks_logo.svg" width="30%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+           	<li class="service__list__item"><a href="https://www.readworks.org" target="_blank" rel="nofollow"><img src="img/readworks_logo.svg" width="30%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		<li class="service__list__item"><a href="https://www.quill.org" target="_blank" rel="nofollow"><img src="img/quill_logo.png" width="18%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
                 <li class="service__list__item"><a href="https://readtheory.org" target="_blank" rel="nofollow"><img src="img/readtheory_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-               <li class="service__list__item"><a href="https://gonoodle.com/" target="_blank" rel="nofollow"><img src="img/gonoodle.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-                <li class="service__list__item"><a href="https://classicsforkids.com" target="_blank" rel="nofollow"><img src="img/classicsforkids_logo.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-		<li class="service__list__item"><a href="https://octostudio.org/" target="_blank" rel="nofollow"><img src="img/logo-octopus.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-		<li class="service__list__item"><a href="https://www.oerproject.com/" target="_blank" rel="nofollow"><img src="img/oer-logo.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li> 
-		<li class="service__list__item"><a href="https://openedx.org/" target="_blank" rel="nofollow"><img src="img/open-edx.jpg" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-		<li class="service__list__item"><a href="https://h5p.org" target="_blank" rel="nofollow"><img src="img/h5p_logo.png" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-                
 		</ul>
             </section>
           </div>
@@ -525,16 +517,13 @@
               <h3 class="project__name">Building</h3>
 	        <ul aria-label="Build and Develop" class="service__list" role="list">
 		<li class="service__list__item"><a href="https://seeedstudio.com" target="_blank" rel="nofollow"><img src="img/seeedstudio.jpeg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
-		<li class="service__list__item"><a href="https://raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="10%"/></a></li>
-		<li class="service__list__item"><a href="https://homeassistant.io" target="_blank" rel="nofollow"><img src="img/home-assistant.png" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
-		<li class="service__list__item"><a href="https://helium.com/iot" target="_blank" rel="nofollow"><img src="img/helium.png" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
-		<!--<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/df-robot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>-->
+		<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/df-robot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa3d.svg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://milonetech.com" target="_blank" rel="nofollow"><img src="img/milone.png" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://rpesrl.com/en" target="_blank" rel="nofollow"><img src="img/RPEsrl.jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://squareline.io" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/squareline_logo.png" width="15%"/></a></li>
+		<li class="service__list__item"><a href="https://homeassistant.io" target="_blank" rel="nofollow"><img src="img/home-assistant.png" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/anvil_logo.svg" width="13%"/></a></li>
-	        <li class="service__list__item"><a href="https://py.space" target="_blank" rel="nofollow"><img  src="img/pyspace_logo.png" width="12%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 	    	<li class="service__list__item"><a href="https://github.com/copilot" target="_blank" rel="nofollow"><img  src="img/githubcopilot.jpeg" width="14%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>
 	    	<!--<li class="service__list__item"><a href="https://manus.im" target="_blank" rel="nofollow"><img  src="img/manusai.png" width="17%" style="padding-top: 10px; padding-bottom: 10px"/></a></li>-->
 		</ul>
