--- a/index.html
+++ b/index.html
@@ -489,17 +489,20 @@
         <h3 class="project__name">Recommended for...</h3>
        <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
-              <h3 class="project__name">Living</h3>
+              <h3 class="project__name">Disciple</h3>
               <ul aria-label="Evangelise and Disciple" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://nlt.to" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-		<li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://nplsimpletools.com/" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://langham.org" target="_blank" rel="nofollow"><img src="img/langhamlogo.jpeg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li> 
+		<li class="service__list__item"><a href="https://thegoodbook.co.uk" target="_blank" rel="nofollow"><img src="img/thegoodbook.jpeg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li> 
 		</ul>
             </section>
           </div>
           
           <div class="what-we-do__services-layout__column">
             <section aria-label="3" class="service">
-              <h3 class="project__name">Teaching</h3>
+              <h3 class="project__name">Educate</h3>
               <ul aria-label="Learn and Teach" class="service__list" role="list">
 		<li class="service__list__item"><a href="https://learn.saylor.org" target="_blank" rel="nofollow"><img src="img/saylor_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
        		 <li class="service__list__item"><a href="https://www.coreknowledge.org/download-free-curriculum/" target="_blank" rel="nofollow"><img src="img/coreknowledge_logo.svg" width="40%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>                
@@ -514,13 +517,14 @@
           
           <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
-              <h3 class="project__name">Building</h3>
+              <h3 class="project__name">Create</h3>
 	        <ul aria-label="Build and Develop" class="service__list" role="list">
 		<li class="service__list__item"><a href="https://seeedstudio.com" target="_blank" rel="nofollow"><img src="img/seeedstudio.jpeg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/df-robot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
-		<li class="service__list__item"><a href="https://prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa3d.svg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
+		<li class="service__list__item"><a href="https://prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://milonetech.com" target="_blank" rel="nofollow"><img src="img/milone.png" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://rpesrl.com/en" target="_blank" rel="nofollow"><img src="img/RPEsrl.jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
+		<li class="service__list__item"><a href="https://raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://squareline.io" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/squareline_logo.png" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://homeassistant.io" target="_blank" rel="nofollow"><img src="img/home-assistant.png" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/anvil_logo.svg" width="13%"/></a></li>
