--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </section>
 
     <section aria-labelledby="what-we-do__heading" id="what-we-do">
-      <h2 class="what-we-do__heading" id="what-we-do__heading">Projects</h2>
+      <h2 class="what-we-do__heading" id="what-we-do__heading">Prototype</h2>
 
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
@@ -321,7 +321,7 @@
     </section>
 
     <section aria-labelledby="projects__heading" id="projects">
-      <h2 class="projects__heading" id="projects__heading">Consultations & Reviews</h2>
+      <h2 class="projects__heading" id="projects__heading">Contact</h2>
 
 
       <div class="projects__projects-layout">
@@ -482,20 +482,20 @@
 
 	  
     <section aria-labelledby="what-we-do__heading" id="what-we-do">
-      <h2 class="what-we-do__heading" id="what-we-do__heading">Tools</h2>
+      <h2 class="what-we-do__heading" id="what-we-do__heading">Equip</h2>
 
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
-        <h3 class="project__name">Recommended for...</h3>
+        <h3 class="project__name">Recommended to...</h3>
        <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
               <h3 class="project__name">Disciple</h3>
               <ul aria-label="Evangelise and Disciple" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://nlt.to" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-		<li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject.png" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-		<li class="service__list__item"><a href="https://nplsimpletools.com/" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
-		<li class="service__list__item"><a href="https://langham.org" target="_blank" rel="nofollow"><img src="img/langhamlogo.jpeg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li> 
-		<li class="service__list__item"><a href="https://thegoodbook.co.uk" target="_blank" rel="nofollow"><img src="img/thegoodbook.jpeg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li> 
+		<li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject.png" width="20%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://nplsimpletools.com/" target="_blank" rel="nofollow"><img src="img/npllogo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
+		<li class="service__list__item"><a href="https://langham.org" target="_blank" rel="nofollow"><img src="img/langhamlogo.jpeg" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li> 
+		<li class="service__list__item"><a href="https://thegoodbook.co.uk" target="_blank" rel="nofollow"><img src="img/thegoodbook.jpeg" width="15%" style="padding-top: 10px; padding-bottom: 10px" /></a></li> 
 		</ul>
             </section>
           </div>
@@ -524,7 +524,7 @@
 		<li class="service__list__item"><a href="https://prusa3d.com" target="_blank" rel="nofollow"><img src="img/prusa_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://milonetech.com" target="_blank" rel="nofollow"><img src="img/milone.png" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://rpesrl.com/en" target="_blank" rel="nofollow"><img src="img/RPEsrl.jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
-		<li class="service__list__item"><a href="https://raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
+		<li class="service__list__item"><a href="https://raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 10px; padding-bottom: 10px" width="10%"/></a></li>
 		<li class="service__list__item"><a href="https://squareline.io" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/squareline_logo.png" width="15%"/></a></li>
 		<li class="service__list__item"><a href="https://homeassistant.io" target="_blank" rel="nofollow"><img src="img/home-assistant.png" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 10px; padding-bottom: 10px" src="img/anvil_logo.svg" width="13%"/></a></li>
