--- a/index.html
+++ b/index.html
@@ -482,11 +482,11 @@
 
 	  
     <section aria-labelledby="what-we-do__heading" id="what-we-do">
-      <h2 class="what-we-do__heading" id="what-we-do__heading">Equip</h2>
+      <h2 class="what-we-do__heading" id="what-we-do__heading">Recommended</h2>
 
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
-        <h3 class="project__name">Recommended to...</h3>
+        <h3 class="project__name"></h3>
        <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
               <h3 class="project__name">Disciple</h3>
