--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         <h3 class="project__name"></h3>
        <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
-              <h3 class="project__name">To disciple</h3>
+              <h3 class="project__name">To Disciple</h3>
               <ul aria-label="Evangelise and Disciple" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://nlt.to" target="_blank" rel="nofollow"><img src="img/nlt_logo.png" width="10%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
 		<li class="service__list__item"><a href="https://bibleproject.com" target="_blank" rel="nofollow"><img src="img/bibleproject.png" width="20%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
@@ -502,7 +502,7 @@
           
           <div class="what-we-do__services-layout__column">
             <section aria-label="3" class="service">
-              <h3 class="project__name">To educate</h3>
+              <h3 class="project__name">To Educate</h3>
               <ul aria-label="Learn and Teach" class="service__list" role="list">
 		<li class="service__list__item"><a href="https://learn.saylor.org" target="_blank" rel="nofollow"><img src="img/saylor_logo.svg" width="35%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>
        		 <li class="service__list__item"><a href="https://www.coreknowledge.org/download-free-curriculum/" target="_blank" rel="nofollow"><img src="img/coreknowledge_logo.svg" width="40%" style="padding-top: 10px; padding-bottom: 10px" /></a></li>                
@@ -517,7 +517,7 @@
           
           <div class="what-we-do__services-layout__column">
             <section aria-label="1" class="service">
-              <h3 class="project__name">To create</h3>
+              <h3 class="project__name">To Make</h3>
 	        <ul aria-label="Build and Develop" class="service__list" role="list">
 		<li class="service__list__item"><a href="https://seeedstudio.com" target="_blank" rel="nofollow"><img src="img/seeedstudio.jpeg" style="padding-top: 10px; padding-bottom: 10px" width="12%"/></a></li>
 		<li class="service__list__item"><a href="https://dfrobot.com" target="_blank" rel="nofollow"><img src="img/df-robot(1).jpg" style="padding-top: 10px; padding-bottom: 10px" width="15%"/></a></li>
