--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="hero__body">
         <h2 class="hero__subheading">👋 Hello, I’m Arnold Tonderai Marunda.</h2>
         <div class="hero__text">
-          <p class="hero__intro">✝️ Disciple of Christ Jesus. ♂♀ Married Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 💻 Workflow Automation Expert.</p>
+          <p class="hero__intro">✝️ Disciple of Christ Jesus. ♂♀ Married Father of 5 kids. 📚 Lifelong Learner. 🍏 Alternative Educator. 🪛 IoT Maker.</p>
         </div>
       </div>
     </section>
